# fanatec-tuner

./: CHANGELOG.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  RELEASE_NOTES.md  fanatec-tuner.toml  led-test.bat
.github/workflows/: ci.yml
data/: car_led_profiles.json
docs/: HARDWARE.md  SHIFT_LIGHTS.md
profiles/wheels/: CSLESWMCL.json  CSLESWMCLV2.json  CSLESWP1PS4.json  CSLESWP1X.json  CSLESWWRC.json  CSLSWGT3.json  CSSWBMW.json  CSSWBMWV2.json  CSSWF1ESV2.json  CSSWFORM.json  CSSWFORMV2.json  CSSWFORMV3.json  CSSWPORSCHE.json  CSSWPVGT.json  CSSWRS.json  GTSWPRO.json  GTSWX.json  PHUB.json  PHUB_PBME.json  PHUB_PBMR.json  PSWBENT.json  PSWBMW.json  wheel-profile.schema.json
profiles/xml/: CarsList_iRacing_FanatecApp.xml  ProfileCarsList_iRacing_FanatecApp.xml  README.txt
src/: car_leds.rs  carlist.rs  config.rs  cpu.rs  display.rs  hid.rs  itm.rs  led.rs  main.rs  monitor.rs  profile.rs  sdk.rs  tuning.rs  wheel.rs
src/games/: ac.rs  iracing.rs  mod.rs
