[package]
name = "fanatec-tuner"
version = "0.3.2"
edition = "2021"
description = "Automatic Fanatec tuning profile loader for sim racing"
repository = "https://github.com/t-hovestadt/fanatec-tuner"
license = "MIT"
keywords = ["fanatec", "sim-racing", "iracing", "hid"]
categories = ["games", "hardware-support"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
